--- a/index.html
+++ b/index.html
@@ -6,13 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   </head>
   <body>
+    <form action="flex">
+      <div class="flex-content">
+        <div class="head gold">
+          <div class="content gray-soft">
+            <div class="screen-case">
+              <input type="text" class="screen gray-medium" readonly>
+            </div>
+            <hr>
+            <input type="button" value="1">
+            <input type="button" value="2">
+            <input type="button" value="3">
+            <input type="button" value="*"><br>
+            <input type="button" value="4">
+            <input type="button" value="5">
+            <input type="button" value="6">
+            <input type="button" value="-"><br>
+            <input type="button" value="7">
+            <input type="button" value="8">
+            <input type="button" value="9">
+            <input type="button" value="+"><br>
+            <input class="gray-green" type="button"  value="C">
+            <button class="gray-green" type="button">=</button>
+            <input class="number gray-green" type="button" value="0">
+            <input class="number gray-green" type="button" value="/">
+          </div>
+        </div>
+      </div>
+    </form>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/app.js"></script>
   </body>
 </html>
