--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   </head>
   <body>
-    <form action="flex">
+    <form class="flex">
       <div class="flex-content">
-        <div class="head gold">
-          <div class="content gray-soft">
-            <div class="screen-case">
-              <input type="text" class="screen gray-medium" readonly>
-            </div>
-            <hr>
-            <input type="button" value="1">
-            <input type="button" value="2">
-            <input type="button" value="3">
-            <input type="button" value="*"><br>
-            <input type="button" value="4">
-            <input type="button" value="5">
-            <input type="button" value="6">
-            <input type="button" value="-"><br>
-            <input type="button" value="7">
-            <input type="button" value="8">
-            <input type="button" value="9">
-            <input type="button" value="+"><br>
-            <input class="gray-green" type="button"  value="C">
-            <button class="gray-green" type="button">=</button>
-            <input class="number gray-green" type="button" value="0">
-            <input class="number gray-green" type="button" value="/">
+        <div class="head gold"></div>
+        <div class="content gray-soft">
+          <div class="screen-case">
+            <input type="text" class="screen gray-medium" readonly>
           </div>
+          <hr>
+          <input type="button" value="1">
+          <input type="button" value="2">
+          <input type="button" value="3">
+          <input type="button" value="*"><br>
+          <input type="button" value="4">
+          <input type="button" value="5">
+          <input type="button" value="6">
+          <input type="button" value="-"><br>
+          <input type="button" value="7">
+          <input type="button" value="8">
+          <input type="button" value="9">
+          <input type="button" value="+"><br>
+          <input class="gray-green" type="button"  value="C">
+          <button class="gray-green" type="button">=</button>
+          <input class="number gray-green" type="button" value="0">
+          <input class="number gray-green" type="button" value="/">
         </div>
       </div>
     </form>
